--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -20,12 +20,14 @@ header {
   width: 100%;
   background: rgb(0, 166, 255);
   color: #fff;
+  font-size: larger;
   font-family: "Fascinate Inline", Georgia, 'Times New Roman', Times, serif;
-  padding: 20px 15px;
+  padding: 15px 15px;
   border-radius: 30px 30px 0 0;
 }
 
 #header_tagline {
+  font-size: smaller;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -44,7 +46,7 @@ nav {
 }
 
 ul {
-  padding: 8px 0 0 15px;
+  padding: 6px 0 0 15px;
   }
 
 li {
@@ -77,5 +79,3 @@ footer {
   padding: 15px;
   border-radius: 0 0 30px 30px;
 }
-
-  
