--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -18,9 +18,9 @@ header {
   top: 0px;
   height: 100px;
   width: 100%;
-  background: rgb(0,165,255) url("../tile_01.jpg");
-  /* background: rgb(0,165,255);
-  background-image: url("../tile_01.jpg"); */
+  /* background: rgb(0,165,255) url("../tile_01.jpg"); */
+  background: rgb(0,165,255);
+  /* background-image: url("../tile_01.jpg"); */
   color: #fff;
   font-size: larger;
   font-family: 'Fascinate Inline', Georgia, 'Times New Roman', Times, serif;
@@ -53,7 +53,7 @@ section {
   height: 100vh;
   width: 80%;
   margin: 100px auto;
-  background: rgb(255,160,0);
+  /* background: rgb(255,160,0); */
   padding: 15px;
   /* overflow: scroll; */
 } .section_header {
@@ -73,7 +73,6 @@ footer {
   background: rgb(0,165,255) url("../tile_01.jpg");
   /* background: rgb(0,165,255);
   background-image: url("../tile_01.jpg"); */
-  color: #fff;
   padding: 15px;
   border-radius: 0 0 30px 30px;
 }
