--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -27,6 +27,14 @@ header {
   padding: 15px 15px;
   border-radius: 30px 30px 0 0;
 }
+header {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#00a5ff+1,c1e9ff+100 */
+background: rgb(0,165,255); /* Old browsers */
+background: -moz-linear-gradient(left,  rgba(0,165,255,1) 1%, rgba(193,233,255,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  rgba(0,165,255,1) 1%,rgba(193,233,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  rgba(0,165,255,1) 1%,rgba(193,233,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00a5ff', endColorstr='#c1e9ff',GradientType=1 ); /* IE6-9 */
+}
 
 #header_tagline {
   font-size: smaller;
