--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -5,14 +5,6 @@
   box-sizing: border-box;
 }
 
-.container {
-  width: 100%;
-  background: yellow;
-  font-family: Arial, Helvetica, sans-serif;
-  /* web safe serif: Arial, "Lucida Sans", "Lucida Grande", Lucida, Tahoma, Trebuchet, Verdana */
-  /* web safe sans-serif: "Courier New", Courier, Garamond, Georgia, Palatino, Linotype, "Times New Roman", Times */
-}
-
 header {
   position: fixed;
   top: 0px;
@@ -26,14 +18,6 @@ header {
   padding: 15px 15px;
   border-radius: 30px 30px 0 0;
 }
-header {
-  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#00a5ff+1,c1e9ff+100 */
-background: rgb(0,165,255); /* Old browsers */
-background: -moz-linear-gradient(left,  rgba(0,165,255,1) 1%, rgba(193,233,255,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left,  rgba(0,165,255,1) 1%,rgba(193,233,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right,  rgba(0,165,255,1) 1%,rgba(193,233,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00a5ff', endColorstr='#c1e9ff',GradientType=1 ); /* IE6-9 */
-}
 
 #header_tagline {
   font-size: smaller;
@@ -42,8 +26,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00a5ff', end
 
 aside {
   float: left;
-  position: fixed;
-  height: 100vh;
+  /* height: 100vh; */
   width: 20%;
   margin: 100px auto;
   background: rgb(120,222,11);
@@ -57,10 +40,10 @@ aside {
 
 section {
   float: right;
-  height: 100vh;
+  /* height: 100vh; */
   width: 80%;
   margin: 100px auto;
-  /* background: rgb(255,160,0); */
+  background: rgb(255,160,0);
   padding: 15px;
   /* overflow: scroll; */
 } .section_header {
@@ -72,10 +55,6 @@ section {
 
 footer {
   clear: both;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   height: 50px;
   background: rgb(0,165,255) url("../tile_01.jpg");
   /* background: rgb(0,165,255);
