--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -12,11 +12,11 @@ header {
   width: 100%;
   background: rgb(0,165,255);
   background: linear-gradient(to right, rgb(0,165,255), rgb(147, 217, 255));
+  /* border-radius: 30px 30px 0 0; */
   color: #fff;
   font-size: larger;
   font-family: 'Fascinate Inline', Georgia, 'Times New Roman', Times, serif;
   padding: 15px 15px;
-  border-radius: 30px 30px 0 0;
 }
 
 #header_tagline {
@@ -56,9 +56,9 @@ section {
 footer {
   clear: both;
   height: 50px;
+  border-radius: 0 0 30px 30px;
   background: rgb(0,165,255) url("../tile_01.jpg");
   /* background: rgb(0,165,255);
   background-image: url("../tile_01.jpg"); */
   padding: 15px;
-  border-radius: 0 0 30px 30px;
 }
